tests/baselines/reference/typeParameterAssignability2.errors.txt
==== tests/cases/compiler/typeParameterAssignability2.ts (31 errors) ====
    // type parameters are not assignable to one another unless directly or indirectly constrained to one another
    
    function foo<T, U extends T>(t: T, u: U) {
                    ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        u = t; // ok
        ~
!!! error TS2011: Cannot convert 'T' to 'U'.
    }
    
    function foo2<T extends U, U>(t: T, u: U) {
                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        u = t; // ok
    }
    
    function foo3<T extends U, U extends V, V>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        u = t;
    
        t = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'T'.
        v = t; // ok
    
        u = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'U'.
        v = u; // ok
    }
    
    function foo4<T extends U, U extends V, V extends Date>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                               ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        t = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'T'.
        t = new Date(); // error
        ~
!!! error TS2011: Cannot convert 'Date' to 'T'.
    
        u = t;
        u = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'U'.
        u = new Date(); // error
        ~
!!! error TS2011: Cannot convert 'Date' to 'U'.
    
        v = t;
        v = u;
        v = new Date(); // ok
        ~
!!! error TS2011: Cannot convert 'Date' to 'V'.
    
        var d: Date;
        d = t; // ok
        d = u; // ok
        d = v; // ok
    }
    
    // same as foo4 with different type parameter ordering
    function foo5<V extends Date, U extends V, T extends U>(t: T, u: U, v: V) {
                                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                               ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        t = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'T'.
        t = new Date(); // error
        ~
!!! error TS2011: Cannot convert 'Date' to 'T'.
    
        u = t;
        u = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'U'.
        u = new Date(); // error
        ~
!!! error TS2011: Cannot convert 'Date' to 'U'.
    
        v = t;
        v = u;
        v = new Date(); // ok
        ~
!!! error TS2011: Cannot convert 'Date' to 'V'.
    
        var d: Date;
        d = t; // ok
        d = u; // ok
        d = v; // ok
    }
    
    function foo6<T extends U, U, V>(t: T, u: U, v: V) {
                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        t = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'T'.
        t = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'T'.
    
        u = t; // ok
        u = v; // error
        ~
!!! error TS2011: Cannot convert 'V' to 'U'.
    
        v = t; // error
        ~
!!! error TS2011: Cannot convert 'T' to 'V'.
        v = u; // error
        ~
!!! error TS2011: Cannot convert 'U' to 'V'.
    }